Fix goals responsiveness on mobile devices

--- a/src/components/Goals/goals.css
+++ b/src/components/Goals/goals.css
@@ -61,3 +61,9 @@
         width: 15rem;
     }
 }
+
+@media screen and (max-width: 824px) {
+    .goal{
+        width: 65%;
+    }
+}
